--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -138,6 +138,10 @@
         <i>von David Hamp-Gonsalves.</i>
         <br/><br/>
 
+        <b><a href="https://github.com/makovkastar/FloatingActionButton/">FloatingActionButton</a></b><br/>
+        <i>von Oleksandr Melnykov.</i><br/>
+        MIT Licensebr/><br/>
+
         <b><a href="http://font.ubuntu.com/">Ubuntu Mono</a></b> <br/>
         <i>von Canonical Ltd.</i> <br/>
         Ubuntu Font Licence 1.0.
