--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,6 +163,10 @@
         <i>by David Hamp-Gonsalves.</i>
         <br/><br/>
 
+        <b><a href="https://github.com/makovkastar/FloatingActionButton/">FloatingActionButton</a></b><br/>
+        <i>by Oleksandr Melnykov.</i><br/>
+        MIT License.<br/><br/>
+
         <b><a href="http://font.ubuntu.com/">Ubuntu Mono</a></b> <br/>
         <i>by Canonical Ltd.</i> <br/>
         Ubuntu Font Licence 1.0.
